{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 20,
  "lineage": "f1f05bf3-e646-b1bf-85ff-62c80c985952",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "partager-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ebacdc178ae23b7",
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:instance/i-0b7e575c3290b46ca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7e575c3290b46ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ram-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e37dea92e90cd435",
            "private_dns": "ip-10-1-11-194.ap-northeast-1.compute.internal",
            "private_ip": "10.1.11.194",
            "public_dns": "ec2-35-72-105-241.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.105.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "partager-instance"
                },
                "throughput": 0,
                "volume_id": "vol-06cd6ec1f3993872a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd7d27f1bb640dd",
            "tags": {
              "Name": "partager-instance"
            },
            "tags_all": {
              "Name": "partager-instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-019b59a8da5598fd0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "partager-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:internet-gateway/igw-0b920c97e544aaed1",
            "id": "igw-0b920c97e544aaed1",
            "owner_id": "446483722194",
            "tags": {
              "Name": "partager-internet-gateway"
            },
            "tags_all": {
              "Name": "partager-internet-gateway"
            },
            "vpc_id": "vpc-0186c21475e18b772"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "partager-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:route-table/rtb-07cfbfd58427bcf03",
            "id": "rtb-07cfbfd58427bcf03",
            "owner_id": "446483722194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b920c97e544aaed1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "partager-public-route-table"
            },
            "tags_all": {
              "Name": "partager-public-route-table"
            },
            "vpc_id": "vpc-0186c21475e18b772"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1452c9e0c9a9a5",
            "route_table_id": "rtb-07cfbfd58427bcf03",
            "subnet_id": "subnet-08bd7d27f1bb640dd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075afef4b70534712",
            "route_table_id": "rtb-07cfbfd58427bcf03",
            "subnet_id": "subnet-011f146d6e119292e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "partager-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:security-group/sg-08abfbd1370b31916",
            "description": "Partager MySQL Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08abfbd1370b31916",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019b59a8da5598fd0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "partager-db-sg",
            "name_prefix": "",
            "owner_id": "446483722194",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0186c21475e18b772"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "partager-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:security-group/sg-019b59a8da5598fd0",
            "description": "Partager Web APP Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019b59a8da5598fd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "partager-web-sg",
            "name_prefix": "",
            "owner_id": "446483722194",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0186c21475e18b772"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "partager-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:subnet/subnet-04c2920636d6d5711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.15.0/24",
            "id": "subnet-04c2920636d6d5711",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446483722194",
            "tags": {
              "Name": "partager-private-a"
            },
            "tags_all": {
              "Name": "partager-private-a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0186c21475e18b772"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "partager-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:subnet/subnet-0d2302be6cef05e2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.55.0/24",
            "id": "subnet-0d2302be6cef05e2a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446483722194",
            "tags": {
              "Name": "partager-private-c"
            },
            "tags_all": {
              "Name": "partager-private-c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0186c21475e18b772"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "partager-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:subnet/subnet-08bd7d27f1bb640dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.11.0/24",
            "id": "subnet-08bd7d27f1bb640dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446483722194",
            "tags": {
              "Name": "partager-public-a"
            },
            "tags_all": {
              "Name": "partager-public-a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0186c21475e18b772"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "partager-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:subnet/subnet-011f146d6e119292e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.51.0/24",
            "id": "subnet-011f146d6e119292e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446483722194",
            "tags": {
              "Name": "partager-public-c"
            },
            "tags_all": {
              "Name": "partager-public-c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0186c21475e18b772"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "partager-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:446483722194:vpc/vpc-0186c21475e18b772",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c9e6dba5afe663a5",
            "default_route_table_id": "rtb-0aa35631f09e653c4",
            "default_security_group_id": "sg-06a3c453d27f547f3",
            "dhcp_options_id": "dopt-33b55a55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0186c21475e18b772",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aa35631f09e653c4",
            "owner_id": "446483722194",
            "tags": {
              "Name": "partager"
            },
            "tags_all": {
              "Name": "partager"
            }
          }
        }
      ]
    }
  ]
}